--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
+ansible==2.8.5
+ansible-runner==1.4.2
+cffi==1.13.0
 Click==7.0
+cryptography==2.8
+docutils==0.15.2
 Flask==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.10.1
+lockfile==0.12.2
 MarkupSafe==1.1.1
+netaddr==0.7.19
+pexpect==4.7.0
+psutil==5.6.3
+ptyprocess==0.6.0
+pycparser==2.19
+python-daemon==2.2.3
+PyYAML==5.1.2
+six==1.12.0
 Werkzeug==0.15.6
